[gd_scene load_steps=4 format=3 uid="uid://bhfcuebb6jhfv"]

[ext_resource type="Script" path="res://Official Game/Skripts/mainmenu.gd" id="1_msu6q"]
[ext_resource type="FontFile" uid="uid://dlybl7kdo0onu" path="res://Official Game/Text/Nexa-Heavy.ttf" id="2_i3bqv"]
[ext_resource type="AudioStream" uid="uid://rqm0q4exh8km" path="res://Official Game/Sounds/mixkit-hard-typewriter-click-1119.mp3" id="3_0h730"]

[node name="mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_msu6q")

[node name="Container" type="Container" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = 155.0
offset_top = 29.0
offset_right = 289.0
offset_bottom = 52.0
scale = Vector2(0.936577, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(100, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_i3bqv")
text = "Risk of Memories"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
visible = false
layout_mode = 2
offset_left = 122.0
offset_top = 85.0
offset_right = 323.0
offset_bottom = 212.0
scale = Vector2(0.936577, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_i3bqv")
theme_override_font_sizes/font_size = 11
text = "1.PRESS E OR LEFT MOUSE BUTTON
TO INTERACT
2.PRESS WASD TO MOVE
3.PRESS F TO USE FLASHLIGHT"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.019
anchor_bottom = 0.033
offset_left = 146.0
offset_top = 99.0
offset_right = 277.868
offset_bottom = 112.08
theme_override_fonts/font = ExtResource("2_i3bqv")
theme_override_font_sizes/font_size = 10
text = "PLAY GAME"

[node name="Button2" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.019
anchor_bottom = 0.033
offset_left = 146.0
offset_top = 128.0
offset_right = 277.868
offset_bottom = 141.08
theme_override_fonts/font = ExtResource("2_i3bqv")
theme_override_font_sizes/font_size = 10
text = "QUIT"

[node name="Button3" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.019
anchor_bottom = 0.033
offset_left = 146.0
offset_top = 157.0
offset_right = 277.868
offset_bottom = 170.08
theme_override_fonts/font = ExtResource("2_i3bqv")
theme_override_font_sizes/font_size = 10
text = "HOW TO PLAY?"

[node name="Button4" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.019
anchor_bottom = 0.033
offset_left = 89.0
offset_top = 192.0
offset_right = 117.868
offset_bottom = 205.08
theme_override_fonts/font = ExtResource("2_i3bqv")
theme_override_font_sizes/font_size = 10
text = "BACK"

[node name="Mixkit-hard-typewriter-click-1119" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0h730")
